infra/k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollin-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: asia-south1-docker.pkg.dev/rollin-deployment/kiran6177/rollin-auth
        resources:
          requests:
            cpu: "100m"  
            memory: "128Mi"  
          limits:
            cpu: "100m"  
            memory: "128Mi"
        ports:
        - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - name: auth
    protocol: TCP
    port: 4001
    targetPort: 4001
  sessionAffinity: ClientIP
