infra/k8s/booking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollin-booking-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
      - name: booking
        image: asia-south1-docker.pkg.dev/rollin-deployment/kiran6177/rollin-booking
        resources:
          requests:
            cpu: "100m"  
            memory: "128Mi"  
          limits:
            cpu: "100m"  
            memory: "128Mi"
        ports:
        - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: booking-svc
spec:
  selector:
    app: booking
  ports:
  - name: booking
    protocol: TCP
    port: 4004
    targetPort: 4004
