infra/k8s/client-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollin-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: asia-south1-docker.pkg.dev/rollin-deployment-437207/kiran6177/rollin-client:latest
        resources:
          requests:
            cpu: "100m"  
            memory: "128Mi"  
          limits:
            cpu: "200m"  
            memory: "256Mi"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: client
    protocol: TCP
    port: 3000
    targetPort: 3000
