infra/k8s/movie-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollin-movie-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie
  template:
    metadata:
      labels:
        app: movie
    spec:
      containers:
      - name: movie
        image: asia-south1-docker.pkg.dev/rollin-deployment/kiran6177/rollin-movie:latest
        resources:
          requests:
            cpu: "100m"  
            memory: "128Mi"  
          limits:
            cpu: "100m"  
            memory: "128Mi"
        ports:
        - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: movie-svc
spec:
  selector:
    app: movie
  ports:
  - name: movie
    protocol: TCP
    port: 4002
    targetPort: 4002
