infra/k8s/theatre-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollin-theatre-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theatre
  template:
    metadata:
      labels:
        app: theatre
    spec:
      containers:
      - name: theatre
        image: asia-south1-docker.pkg.dev/rollin-deployment/kiran6177/rollin-theatre:latest
        resources:
          requests:
            cpu: "100m"  
            memory: "128Mi"  
          limits:
            cpu: "100m"  
            memory: "128Mi"
        ports:
        - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: theatre-svc
spec:
  selector:
    app: theatre
  ports:
  - name: theatre
    protocol: TCP
    port: 4003
    targetPort: 4003
