infra/k8s/ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-connection-header: "true"
    nginx.org/proxy-read-timeout: "3600"
    nginx.org/proxy-send-timeout : "3600"
    nginx.ingress.kubernetes.io/upgrade: "websocket"
    nginx.org/websocket-services: "auth-svc"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000,"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  rules:
  - host: rollinmovie.online
    http:
      paths:
      - pathType: Prefix
        path: "/api/auth/"
        backend:
          service:
            name: auth-svc
            port:
             number: 4001
      - pathType: Prefix
        path: "/api/booking/"
        backend:
          service:
            name: booking-svc
            port:
             number: 4004
      - pathType: Prefix
        path: "/api/movie/"
        backend:
          service:
            name: movie-svc
            port:
             number: 4002
      - pathType: Prefix
        path: "/api/theatre/"
        backend:
          service:
            name: theatre-svc
            port:
             number: 4003
      - pathType: ImplementationSpecific
        path: "/socket.io/"
        backend:
          service:
            name: auth-svc
            port:
             number: 4001
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-svc
            port:
             number: 3000
  tls:
  - hosts:
    - rollinmovie.online
    secretName: rollin-tls

  #RUN - https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml
